commit: 14h 26/10/2025 - Add swagger for laravel - Update axios config for reactjs - Fix response when token is expired
